--- a/A4-Quantifiers.ipynb
+++ b/A4-Quantifiers.ipynb
@@ -38,39 +38,65 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 45,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Domain 1: [2, 3, 4, 5, 6, 7, 8, 9, 10]\n",
+      "Domain 2: [2, 4, 6, 8]\n",
+      "Universal Quantifier (∀x): For all x, x is even (domain 1): False\n",
+      "Universal Quantifier (∀x): For all x, x is even (domain 2): True\n",
+      "Existential Quantifier (∃x): There exists an x such that x is positive (domain 1): True\n",
+      "Existential Quantifier (∃x): There exists an x such that x is negative (domain 1): False\n"
+     ]
+    }
+   ],
    "source": [
     "# Demonstrate Univ Quant and Exist Quant\n",
     "\n",
     "def is_even(x):\n",
     "    \"\"\"Predicate 1: Checks if x is even.\"\"\"\n",
-    "    \n",
+    "    return x%2 == 0\n",
+    "\n",
     "\n",
     "def is_positive(x):\n",
     "    \"\"\"Predicate 2: Checks if x is positive.\"\"\"\n",
-    "    \n",
+    "    return x > 0\n",
+    "\n",
     "\n",
     "def is_negative(x):\n",
     "    \"\"\"Predicate 4: Checks if x is negative.\"\"\"\n",
-    "    \n",
+    "    return x < 0\n",
+    "\n",
+    "def product(lst):\n",
+    "    res = 1\n",
+    "    for element in lst:\n",
+    "        res = res * element\n",
+    "    return res\n",
+    "\n",
+    "\n",
+    "def for_all(method, domain):\n",
+    "    return bool(product([method(x) for x in domain]))\n",
+    "\n",
+    "\n",
+    "def for_each(method, domain):\n",
+    "    return bool(sum([method(x) for x in domain]))\n",
     "\n",
     "def demonstrate_quantifiers():\n",
-    "    \"\"\"Demonstrates both existential and universal quantifiers using Python and SymPy.\"\"\"\n",
-    "    \n",
+    "    \"\"\"Demonstrates both existential and universal quantifiers using Python.\"\"\"\n",
+    "    domain1 = [2,3,4,5,6,7,8,9,10]\n",
+    "    domain2 = [2,4,6,8]\n",
+    "    print(f\"Domain 1: {domain1}\")\n",
+    "    print(f\"Domain 2: {domain2}\")\n",
     "\n",
-    "    # Universal Quantifier (∀x): For all x, x is even (domain 1)\n",
-    "    \n",
+    "    print(f\"Universal Quantifier (∀x): For all x, x is even (domain 1): {for_all(is_even, domain1)}\")\n",
+    "    print(f\"Universal Quantifier (∀x): For all x, x is even (domain 2): {for_all(is_even, domain2)}\")\n",
+    "    print(f\"Existential Quantifier (∃x): There exists an x such that x is positive (domain 1): {for_each(is_positive, domain1)}\")\n",
+    "    print(f\"Existential Quantifier (∃x): There exists an x such that x is negative (domain 1): {for_each(is_negative, domain1)}\")\n",
     "\n",
-    "    # Universal Quantifier (∀x): For all x, x is even (domain 2)\n",
-    "    \n",
-    "\n",
-    "    # Existential Quantifier (∃x): There exists an x such that x is positive\n",
-    "    \n",
-    "\n",
-    "    # Existential Quantifier (∃x): There exists an x such that x is negative\n",
-    "    \n",
     "\n",
     "demonstrate_quantifiers()\n"
    ]
@@ -91,21 +117,40 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 51,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Domian: [1, 2, 3, 4, 5, 6, 7, 8, 9, 10]\n",
+      "Uniqueness Quantifier (∃!x): There exists one and only one x such that x is prime: False\n"
+     ]
+    }
+   ],
    "source": [
     "# Demonstrate the uniqueness quantifier\n",
     "\n",
     "def is_prime(x):\n",
     "    \"\"\"Predicate: Checks if x is a prime number.\"\"\"\n",
-    "    \n",
-    "    \n",
+    "    if x < 2:\n",
+    "        return False\n",
+    "    i = 2\n",
+    "    while i*i <= x:\n",
+    "        if x % i == 0:\n",
+    "            return False\n",
+    "        i = i + 1\n",
+    "    return True\n",
+    "\n",
+    "def there_exists_a_unique(method, domain):\n",
+    "    return sum([method(x) for x in domain]) == 1\n",
     "\n",
     "def demonstrate_uniqueness_quantifier():\n",
     "    \"\"\"Demonstrates the uniqueness quantifier (∃!) using Python.\"\"\"\n",
-    "    \n",
-    "    \n",
+    "    domain = [1,2,3,4,5,6,7,8,9,10]\n",
+    "    print(f\"Domian: {domain}\")\n",
+    "    print(f\"Uniqueness Quantifier (∃!x): There exists one and only one x such that x is prime: {there_exists_a_unique(is_prime, domain)}\")\n",
     "\n",
     "demonstrate_uniqueness_quantifier()"
    ]
@@ -135,38 +180,55 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 50,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Does there exist at least one x and y such that x is even, y is positive, and x + y = 10?\n",
+      "True for x = 2 and y = 8\n"
+     ]
+    }
+   ],
    "source": [
     "# Demonstrate Nested Quantifiers with an example\n",
     "\n",
     "def is_even(x):\n",
     "    \"\"\"Predicate: Checks if x is even.\"\"\"\n",
-    "    \n",
+    "    return x%2 == 0\n",
     "\n",
-    "def is_positive(y):\n",
-    "    \"\"\"Predicate: Checks if y is positive.\"\"\"\n",
-    "    \n",
+    "\n",
+    "def is_positive(x):\n",
+    "    \"\"\"Predicate: Checks if x is positive.\"\"\"\n",
+    "    return x > 0\n",
+    "\n",
+    "def nested_exists(method1, domain1, method2, domain2, method3):\n",
+    "    for x in domain1:\n",
+    "        for y in domain2:\n",
+    "            if(method1(x) and method2(y) and method3(x,y)):\n",
+    "                return(f\"True for x = {x} and y = {y}\")\n",
+    "    return \"False\"\n",
+    "\n",
+    "def adds_to_ten(x, y):\n",
+    "    return x + y == 10\n",
+    "\n",
+    "domain1 = [1,2,3,4,5,6,7,8,9,10]\n",
+    "domain2 = [1,2,3,4,5,6,7,8,9,10]\n",
     "\n",
     "def demonstrate_nested_quantifiers():\n",
     "    \"\"\"Demonstrates nested quantifiers in Python.\"\"\"\n",
-    "    \n",
+    "    print(\"Does there exist at least one x and y such that x is even, y is positive, and x + y = 10?\")\n",
+    "    print(nested_exists(is_even, domain1, is_positive, domain2, adds_to_ten))\n",
     "\n",
     "demonstrate_nested_quantifiers()"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": ".venv",
+   "display_name": "Python 3",
    "language": "python",
    "name": "python3"
   },
@@ -180,7 +242,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.3"
+   "version": "3.11.7"
   },
   "orig_nbformat": 4
  },
