--- a/A2-LogEqNormForm.ipynb
+++ b/A2-LogEqNormForm.ipynb
@@ -17,7 +17,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 114,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -34,6 +34,33 @@
     "        for value in values:\n",
     "            print(f\"{'F' if value == 0 else 'T'}\", end ='\\t')\n",
     "        print(result)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "x\ty\tz\t~(z & ~y) & (x | (y & ~x))\n",
+      "F\tF\tF\tFalse\n",
+      "F\tF\tT\tFalse\n",
+      "F\tT\tF\tTrue\n",
+      "F\tT\tT\tTrue\n",
+      "T\tF\tF\tTrue\n",
+      "T\tF\tT\tFalse\n",
+      "T\tT\tF\tTrue\n",
+      "T\tT\tT\tTrue\n"
+     ]
+    }
+   ],
+   "source": [
+    "x,y,z = props = symbols('x,y,z')\n",
+    "exp = ~(~y&z)&(x|(~x&y))\n",
+    "print_truth_table(exp, props)"
    ]
   },
   {
