--- a/A6-Inferences.ipynb
+++ b/A6-Inferences.ipynb
@@ -43,7 +43,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [
     {
@@ -51,10 +51,42 @@
      "output_type": "stream",
      "text": [
       "Modus Ponens: If p implies q, and p is true, then q is true.\n",
-      "Premise 1: Implies(p, q)\n",
+      "Premise 1 (p implies q): Implies(p, q)\n",
       "Premise 2 (p is true): p\n",
       "Conclusion (q is true): q\n",
-      "\n"
+      "\n",
+      "Modus Tollens: If p implies q, and q is false, then p is false.\n",
+      "Premise 1 (p implies q): Implies(p, q)\n",
+      "Premise 2 (q is false): ~q\n",
+      "Conclusion (q is true): ~p\n",
+      "\n",
+      "Hypothetical Syllogism: If p implies q, and q implies r, p implies r.\n",
+      "Premise 1 (p implies q): Implies(p, q)\n",
+      "Premise 2 (q implies r): Implies(q, r)\n",
+      "Conclusion (p implies r): Implies(p, r)\n",
+      "\n",
+      "Disjunctive Syllogism: If p or q, and not p, then q is true.\n",
+      "Premise 1 (p or q): p | q\n",
+      "Premise 2 (not p): ~p\n",
+      "Conclusion (q is true): q\n",
+      "\n",
+      "Addition: If p is true, then p or q is true\n",
+      "Premise 1 (p): p\n",
+      "Conclusion (p or q): p | q\n",
+      "\n",
+      "Conjunction: if p is true, and q is true, then p and q are true\n",
+      "Premise 1 (p):  p\n",
+      "Premise 2 (q):  q\n",
+      "Conclusion (p and q):  p & q\n",
+      "\n",
+      "Simplification: If p and q are true, then p is true\n",
+      "Premise (p and q): p & q\n",
+      "Conclusion (q is true): p\n",
+      "\n",
+      "Resolution: If (p or q) and (not p or r) are true, then q or r is true.\n",
+      "Premise 1 (p or q):  p | q\n",
+      "Premise 2 (~p or r):  r | ~p\n",
+      "Conclusion (q or r):  q | r\n"
      ]
     }
    ],
@@ -69,32 +101,44 @@
     "    if premise2 and isinstance(premise1, Implies):\n",
     "        if premise1.args[0] == premise2:\n",
     "            return premise1.args[1]\n",
-    "    return None\n",
-    "    \n",
     "\n",
     "def modus_tollens(premise1, premise2):\n",
     "    \"\"\"Modus Tollens: If p implies q, and q is false, then p is false.\"\"\"\n",
-    "    \n",
+    "    if isinstance(premise1, Implies):\n",
+    "        if premise1.args[1] == ~premise2:\n",
+    "            return ~premise1.args[0]\n",
     "\n",
     "def hypothetical_syllogism(premise1, premise2):\n",
     "    \"\"\"Hypothetical Syllogism: If p implies q, and q implies r, then p implies r.\"\"\"\n",
-    "    \n",
+    "    if isinstance(premise1, Implies) and isinstance(premise2, Implies) and premise1.args[1] == premise2.args[0]:\n",
+    "        return Implies(premise1.args[0], premise2.args[1])\n",
     "\n",
     "def disjunctive_syllogism(premise1, premise2):\n",
     "    \"\"\"Disjunctive Syllogism: If p or q is true, and p is false, then q is true.\"\"\"\n",
-    "    \n",
+    "    if isinstance(premise1, Or) and premise1.args[0] == ~premise2:\n",
+    "        return premise1.args[1]\n",
+    "\n",
     "\n",
     "def addition(premise1, premise2):\n",
     "    \"\"\"Addition: If p is true, then p or q is true.\"\"\"\n",
-    "    \n",
+    "    return Or(premise1, premise2)\n",
+    "\n",
+    "def conjunction(premise1, premise2):\n",
+    "    \"\"\"Conjunction: If p is true, and q is true, then p and q are true\"\"\"\n",
+    "    return premise1 & premise2\n",
+    "\n",
     "\n",
     "def simplification(premise):\n",
     "    \"\"\"Simplification: If p and q is true, then p is true.\"\"\"\n",
-    "    \n",
+    "    if isinstance(premise, And):\n",
+    "        return premise.args[0]\n",
+    "\n",
     "\n",
     "def resolution(premise1, premise2):\n",
-    "    \"\"\"Resolution: If (p or q) and (not q or r) are true, then p or r is true.\"\"\"\n",
-    "    \n",
+    "    \"\"\"Resolution: If (p or q) and (not p or r) are true, then q or r is true.\"\"\"\n",
+    "    if isinstance(premise1, Or) and isinstance(premise2, Or):\n",
+    "        if premise1.args[0] == ~premise2.args[1]:\n",
+    "            return premise1.args[1] | premise2.args[0]\n",
     "\n",
     "# Example premises\n",
     "premise1 = Implies(p, q)\n",
@@ -103,33 +147,75 @@
     "# Modus Ponens\n",
     "conclusion_mp = modus_ponens(premise1, p)\n",
     "print(\"Modus Ponens: If p implies q, and p is true, then q is true.\")\n",
-    "print(\"Premise 1:\", premise1)\n",
+    "print(\"Premise 1 (p implies q):\", premise1)\n",
     "print(\"Premise 2 (p is true):\", p)\n",
     "print(\"Conclusion (q is true):\", conclusion_mp)\n",
     "print()\n",
     "\n",
     "# Modus Tollens\n",
+    "conclusion_mt = modus_tollens(premise1, ~q)\n",
+    "print(\"Modus Tollens: If p implies q, and q is false, then p is false.\")\n",
+    "print(\"Premise 1 (p implies q):\", premise1)\n",
+    "print(\"Premise 2 (q is false):\", ~q)\n",
+    "print(\"Conclusion (q is true):\", conclusion_mt)\n",
+    "print()\n",
     "\n",
     "\n",
     "# Hypothetical Syllogism\n",
-    "\n",
+    "conclusion_hs = hypothetical_syllogism(premise1, premise2)\n",
+    "print(\"Hypothetical Syllogism: If p implies q, and q implies r, p implies r.\")\n",
+    "print(\"Premise 1 (p implies q):\", premise1)\n",
+    "print(\"Premise 2 (q implies r):\", premise2)\n",
+    "print(\"Conclusion (p implies r):\", conclusion_hs)\n",
+    "print()\n",
     "\n",
     "# Disjunctive Syllogism\n",
-    "disj_premise1 = # ?\n",
-    "disj_premise2 = # ?\n",
-    "\n",
+    "disj_premise1 = p|q\n",
+    "disj_premise2 = ~p\n",
+    "conclusion_ds = disjunctive_syllogism(disj_premise1, disj_premise2)\n",
+    "print(\"Disjunctive Syllogism: If p or q, and not p, then q is true.\")\n",
+    "print(\"Premise 1 (p or q):\", disj_premise1)\n",
+    "print(\"Premise 2 (not p):\", disj_premise2)\n",
+    "print(\"Conclusion (q is true):\", conclusion_ds)\n",
+    "print()\n",
     "\n",
     "# Addition\n",
-    "add_premise1 = # ?\n",
-    "add_premise2 = # ?\n",
+    "add_premise1 = p\n",
+    "add_premise2 = q\n",
+    "conclusion_add = addition(add_premise1, add_premise2)\n",
+    "print(\"Addition: If p is true, then p or q is true\")\n",
+    "print(\"Premise 1 (p):\", add_premise1)\n",
+    "print(\"Conclusion (p or q):\", conclusion_add)\n",
+    "print()\n",
+    "\n",
+    "# Conjunction\n",
+    "conj_premise1 = p\n",
+    "conj_premise2 = q\n",
+    "conclusion_conj = conjunction(conj_premise1, conj_premise2)\n",
+    "print(\"Conjunction: if p is true, and q is true, then p and q are true\")\n",
+    "print(\"Premise 1 (p): \", conj_premise1)\n",
+    "print(\"Premise 2 (q): \", conj_premise2)\n",
+    "print(\"Conclusion (p and q): \", conclusion_conj)\n",
+    "print()\n",
+    "\n",
     "\n",
     "# Simplification\n",
-    "simp_premise = # ?\n",
+    "simp_premise =  p & q\n",
+    "conclusion_simp = simplification(simp_premise)\n",
+    "print(\"Simplification: If p and q are true, then p is true\")\n",
+    "print(\"Premise (p and q):\", simp_premise)\n",
+    "print(\"Conclusion (q is true):\", conclusion_simp)\n",
+    "print()\n",
     "\n",
     "\n",
     "# Resolution\n",
-    "res_premise1 = # ?\n",
-    "res_premise2 = # ?\n"
+    "res_premise1 = p | q\n",
+    "res_premise2 = ~p | r\n",
+    "conclusion_res = resolution(res_premise1, res_premise2)\n",
+    "print(\"Resolution: If (p or q) and (not p or r) are true, then q or r is true.\")\n",
+    "print(\"Premise 1 (p or q): \", res_premise1)\n",
+    "print(\"Premise 2 (~p or r): \", res_premise2)\n",
+    "print(\"Conclusion (q or r): \", conclusion_res)"
    ]
   },
   {
@@ -142,7 +228,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": ".venv",
+   "display_name": "Python 3",
    "language": "python",
    "name": "python3"
   },
@@ -156,7 +242,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.3"
+   "version": "3.11.7"
   },
   "orig_nbformat": 4
  },
